--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -33,7 +33,7 @@
     font-family: var(--f-normal);
     -webkit-transform: rotateY(0deg);
     transform: rotateY(0deg);
-    z-index: 10;
+    z-index: 5;
 
     &:hover {
         cursor: pointer;
@@ -78,8 +78,10 @@ abir el carro
     }
 }
 
+/* falta desing */
+
 .carro-abrir .c-padre {
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     width: 0px;
@@ -92,9 +94,10 @@ abir el carro
 
 .carro-abrir .c-padre .c-hijo {
     position: relative;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    justify-content: space-between;
     padding: 25px 20px;
     border-radius: var(--br);
     background: var(--bg);
@@ -103,13 +106,14 @@ abir el carro
 }
 
 .c-padre .c-hijo .c-encabezado {
+    min-height: 7vh;
     padding: 14px 5px 0px 5px;
     display: grid;
-    height: 14vh;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 2.4rem;
     align-items: center;
-
+    z-index: 21;
+    background-color: var(--bg);
 }
 
 .c-hijo .c-encabezado .c-encabezado-title {
@@ -150,33 +154,207 @@ abir el carro
 
 .c-hijo .c-cuerpo {
     text-align: center;
-    height: 70vh;
+    height: 100%;
+    overflow: auto;
+    border-radius: var(--br);
+    scrollbar-width: thin;
+    scrollbar-color: var(--color) var(--bg);
+
+    &::-webkit-scrollbar {
+        width: thin;
+        width: 1rem;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: var(--bg);
+        border-radius: var(--br);
+    }
+
+    &::-webkit-scrollbar-thumb,
+    ::-webkit-scrollbar-track-piece {
+        background: var(--color);
+        border-radius: calc(var(--br)*2);
+        border: 3px solid var(--bg);
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--bg3);
+    }
+
+    &::-webkit-scrollbar-corner {
+        height: 20px;
+    }
+
+    &::-webkit-scrollbar-button {
+        background: url(../../public/svg/drop-down.svg) 50% no-repeat;
+        background-size: 150% 150%;
+    }
+
+    &::-webkit-scrollbar-button:hover {
+        background: url(../../public/svg/drop-down-focus.svg) 50% no-repeat;
+        background-size: 150% 150%;
+    }
+
+    &::-webkit-scrollbar-button:vertical:decrement {
+        background: url(../../public/svg/drop-down-top.svg) 50% no-repeat;
+        background-size: 150% 150%;
+    }
+
+    &::-webkit-scrollbar-button:vertical:decrement:hover {
+        background: url(../../public/svg/drop-down-top-focus.svg) 50% no-repeat;
+        background-size: 150% 150%;
+    }
+
 }
 
-.c-hijo .c-cuerpo .bienbenida {
+.c-hijo .bienbenida {
     padding: 2rem 0;
-    display: inline-block;
-
+    display: flex;
+    justify-content: center;
 }
 
 .c-hijo .c-cuerpo .cards {
-    height: 80%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 5%;
-    overflow-y: auto;
+    gap: 1rem;
+    /* overflow-y: auto; */
 }
 
 .c-hijo .c-cuerpo .cards .c-card {
-    display: inline-block;
-    height: 4rem;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 6.5rem;
+    justify-items: center;
+    align-items: center;
     width: 100%;
+    padding: .5rem;
     background: var(--bg2);
     border: 2px solid var(--color);
     border-radius: var(--br);
+    color: var(--color-a);
+    box-shadow: 0 0 20px var(--bg2);
+
+    &:hover {
+        cursor: default;
+    }
+}
+
+.c-cuerpo .cards .c-card .btn-close {
+    top: 3px;
+    right: 3px;
+    position: absolute;
+    height: 1rem;
+    width: 1rem;
+
+    &:active {
+        box-shadow: 0 0 1px #000;
+    }
+}
+
+.c-cuerpo .cards .c-card .conte-img {
+    padding: 4px;
+    width: 100%;
+    height: fit-content;
+}
+
+.c-cuerpo .cards .c-card .conte-img img {
+    object-fit: contain;
+    padding: 2px;
+    height: 100%;
+    width: 100%;
+    border: 2px solid var(--btn);
+    box-shadow: 0 0 2px var(--btn);
+    border-radius: var(--br);
+}
+
+.c-cuerpo .cards .c-card .info-producto {
+    max-width: 50%;
+    min-width: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    font-family: monospace;
+}
+
+.c-cuerpo .cards .c-card .info-producto b {
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.c-cuerpo .cards .c-card .info-producto .desc-info-p {
+    line-height: 100%;
+    width: 100%;
+    font-size: 95%;
+    text-wrap: pretty;
+    display: flex;
+    flex-direction: column;
+}
+
+.c-card .info-producto .desc-info-p p {
+    &:nth-child(1) {
+        width: 100%;
+    }
+
+    &:nth-child(2) {
+        width: 100%;
+        filter: grayscale(1.8);
+    }
+}
+
+.c-cuerpo .cards .c-card .contador {
+    width: 100%;
+    height: 60%;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.c-cuerpo .cards .c-card .contador .count {
+    width: 35%;
+    justify-self: center;
+    align-self: center;
+    border-bottom: 1px solid #000;
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+
+.c-cuerpo .cards .c-card .contador .btn-count {
+    grid-row: 2;
+    height: 100%;
+    width: 80%;
+    border: transparent;
+    border-radius: 50%;
+    transform: scale(.8);
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:nth-child(2) {
+        background: url(../../public/svg/mas.svg) no-repeat .2px -1px;
+        background-size: 100% 100%;
+        grid-column: 1;
+    }
+
+    &:nth-child(3) {
+        background: url(../../public/svg/rest.svg) no-repeat 0 4.5px;
+        background-size: 100% 70%;
+        grid-column: 2;
+    }
+
+    &:active {
+        box-shadow: 0 0 1px #000;
+    }
 }
 
 .c-hijo .c-footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 25vh;
     display: flex;
     justify-content: center;
     align-items: center;
