--- a/src/css/itemsTop.css
+++ b/src/css/itemsTop.css
@@ -42,6 +42,7 @@
     border: 1px solid var(--color);
     border-radius: 3px;
     background: var(--bg3);
+    z-index: 10;
 }
 
 /* estilos de el btn cerrado */
