--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -69,11 +69,13 @@ abir el carro
         transition: all .55s ease-in;
     }
 
-    &:checked~.carro-abrir .c-padre .c-hijo {
+    &:checked~.carro-abrir .c-padre .c-hijo,
+    &:checked~.carro-abrir .c-padre .c-footer {
         animation: verSlide .67s;
     }
 
-    &:not(:checked)~.carro-abrir .c-padre .c-hijo {
+    &:not(:checked)~.carro-abrir .c-padre .c-hijo,
+    &:not(:checked)~.carro-abrir .c-padre .c-footer {
         display: none;
     }
 }
@@ -95,6 +97,7 @@ abir el carro
 .carro-abrir .c-padre .c-hijo {
     position: relative;
     height: 85%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -108,6 +111,7 @@ abir el carro
 }
 
 .c-padre .c-hijo .c-encabezado {
+    /* position: fixed; */
     min-height: 7vh;
     padding: 14px 5px 0px 5px;
     display: grid;
@@ -236,11 +240,9 @@ abir el carro
     border: 2px solid var(--color);
     border-radius: var(--br);
     color: var(--color-a);
-    box-shadow: 0 0 20px var(--bg2);
+    box-shadow: 0 0 10px var(--bg2);
+    cursor: default;
 
-    &:hover {
-        cursor: default;
-    }
 }
 
 .c-cuerpo .cards .c-card .btn-close {
@@ -256,7 +258,7 @@ abir el carro
 }
 
 .c-cuerpo .cards .c-card .conte-img {
-    padding: 4px;
+    padding: var(--br);
     width: 100%;
     height: fit-content;
 }
@@ -272,8 +274,7 @@ abir el carro
 }
 
 .c-cuerpo .cards .c-card .info-producto {
-    max-width: 50%;
-    min-width: 10%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -281,33 +282,33 @@ abir el carro
 }
 
 .c-cuerpo .cards .c-card .info-producto b {
-    font-size: 20px;
-    font-weight: 900;
+    /* font-weight: 900; */
+    /* font-size: 120%; */
 }
 
 .c-cuerpo .cards .c-card .info-producto .desc-info-p {
-    line-height: 100%;
+    height: 100%;
     width: 100%;
-    font-size: 95%;
+    font-size: 100%;
     text-wrap: pretty;
     display: flex;
     flex-direction: column;
 }
 
 .c-card .info-producto .desc-info-p p {
-    &:nth-child(1) {
-        width: 100%;
-    }
+    width: 100%;
+
+    /* &:nth-child(1) {} */
 
     &:nth-child(2) {
-        width: 100%;
         filter: grayscale(1.8);
     }
 }
 
 .c-cuerpo .cards .c-card .contador {
     width: 100%;
-    height: 60%;
+    height: 50%;
+    margin: 10px;
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(2, 1fr);
@@ -321,12 +322,13 @@ abir el carro
     border-bottom: 1px solid #000;
     grid-column: 1 / 3;
     grid-row: 1;
+    /* background-color: #994141; */
 }
 
 .c-cuerpo .cards .c-card .contador .btn-count {
     grid-row: 2;
     height: 100%;
-    width: 80%;
+    width: 50%;
     border: transparent;
     border-radius: 50%;
     transform: scale(.8);
@@ -353,9 +355,12 @@ abir el carro
 }
 
 .c-footer {
-    padding: 2.5px 0;
+    position: relative;
+    /* bottom: 0px; */
+    padding: 5px;
     display: flex;
     height: 15%;
+    width: 100%;
     justify-content: center;
     align-items: center;
     border-radius: var(--br);
@@ -364,91 +369,88 @@ abir el carro
     background: var(--bg2);
     border: 1px solid var(--color);
     border-top: 0px solid transparent;
+    z-index: 25;
 }
 
-/* .c-hijo .c-footer .f-btn {
-    height: 100%;
-    width: 100%;
-    border-radius: calc(var(--br)*5);
-    background: var(--bg2);
-    border: 0;
-
-
-    &:active {
-        box-shadow: #000 0 0 2px;
-    }
-} */
 .desc-compras {
-    width: 66%;
+    width: 70%;
     display: grid;
     align-items: center;
-    padding: 9%;
+    margin: 5px;
+    font-size: 14px;
 }
 
 .desc-compras hr {
     width: 100%;
     border: .5px solid var(--color);
-    /* background-color: var(--color); */
 }
 
 .botones {
     height: 100%;
-    width: 26%;
+    /* width: 26%; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    margin: 5px;
+    font-size: 80%;
 }
 
-.c-footer .custom-btn {
-    height: 2rem;
-    cursor: pointer;
+.btn {
     position: relative;
-    /* padding: 10px 20px; */
-    background: transparent;
-    font-size: 15px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    transition: all .7s;
-
-    &:after,
-    &:before {
-        content: " ";
-        width: 10px;
-        height: 10px;
-        position: absolute;
-        border: 0px solid #fff;
-        transition: all 1s;
-    }
-
-    &:after {
-        top: -1px;
-        left: -1px;
-        border-top: 4px solid black;
-        border-left: 4px solid black;
-    }
-
-    &:before {
-        bottom: -1px;
-        right: -1px;
-        border-bottom: 4px solid var(--bg3);
-        border-right: 4px solid black;
-    }
-
-    &:hover {
-        border-top-right-radius: 0px;
-        border-bottom-left-radius: 0px;
-
-        /* // background:rgba(0,0,0,.5); */
-        /* // color:white; */
-        &:before,
-        &:after {
-
-            width: 100%;
-            height: 100%;
-            /* // border-color:white; */
-        }
-    }
+    display: inline-block;
+    padding: .15rem;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    border: 2px solid var(--color);
+    color: #994141;
+    background: var(--bg2);
 }
+
+.btn-span {
+    position: relative;
+    z-index: 3;
+}
+
+
+.btn::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: -2px;
+    width: calc(100% + 6px);
+    /*100% plus double the times left values*/
+    height: calc(100% - 10px);
+    background-color: var(--bg2);
+    transition: all 0.5s ease-in-out;
+    transform: scaleY(1);
+}
+
+.btn:hover::before,
+.btn:hover::before {
+    transform: scaleY(0);
+}
+
+.btn::after {
+    content: "";
+    position: absolute;
+    left: 5px;
+    top: -5px;
+    width: calc(100% - 10px);
+    /*100% plus double the times left values*/
+    height: calc(100% + 10px);
+    background-color: var(--bg2);
+    transition: all 0.5s ease-in-out;
+    transform: scaleX(1);
+}
+
+/* Created by http://grohit.com/  */
+
+.btn:hover::after,
+.btn:hover::after {
+    transform: scaleX(0);
+}
+
 
 @keyframes verSlide {
 
