--- a/src/css/itemsTop.css
+++ b/src/css/itemsTop.css
@@ -1,12 +1,13 @@
 .NB-top-container-tops {
     z-index: 10;
     display: flex;
-    width: 80%;
+    width: 100%;
+    /* justify-content: space-evenly; */
     justify-content: space-around;
     align-items: center;
     grid-column: 5/6;
     grid-row: 1/2;
-    gap: 5%;
+    /* gap: 5%; */
 }
 
 .NB-top-container {
@@ -15,7 +16,7 @@
 
 /* bg iconos top */
 .NB-top-item {
-    width: 4rem;
+    width: 4.7rem;
     height: 2rem;
     display: flex;
     background: transparent;
@@ -34,7 +35,7 @@
 .NB-top-item:hover+.NB-top-open,
 .NB-top-open {
     position: absolute;
-    left: -85%;
+    left: -60%;
     display: flex;
     flex-direction: column;
     width: calc(var(--bg-size)*7);
