--- a/src/css/Carro.css
+++ b/src/css/Carro.css
@@ -86,6 +86,9 @@ abir el carro
     position: fixed;
     right: 0;
     top: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(75%, 60%) minmax(25%, 15%);
     width: 0px;
     height: 100vh;
     border-radius: var(--br);
@@ -96,7 +99,7 @@ abir el carro
 
 .carro-abrir .c-padre .c-hijo {
     position: relative;
-    height: 85%;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -114,6 +117,7 @@ abir el carro
     /* position: fixed; */
     min-height: 7vh;
     padding: 14px 5px 0px 5px;
+    margin: 3px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 2.4rem;
@@ -356,10 +360,10 @@ abir el carro
 
 .c-footer {
     position: relative;
-    /* bottom: 0px; */
+    bottom: 0;
     padding: 5px;
     display: flex;
-    height: 15%;
+    height: 100%;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -370,12 +374,15 @@ abir el carro
     border: 1px solid var(--color);
     border-top: 0px solid transparent;
     z-index: 25;
+    overflow: hidden;
 }
 
 .desc-compras {
     width: 70%;
-    display: grid;
-    align-items: center;
+    height: 100%;
+    text-align: center;
+    /* display: grid; */
+    /* align-items: center; */
     margin: 5px;
     font-size: 14px;
 }
@@ -387,7 +394,7 @@ abir el carro
 
 .botones {
     height: 100%;
-    /* width: 26%; */
+    width: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
